--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+      - postgres_backups:/backups
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
@@ -144,6 +145,7 @@ volumes:
   postgres_data:
   prometheus_data:
   grafana_data:
+  postgres_backups:
 
 networks:
   todo_internal:
